most recent commit

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 						</div>
 						<div class="content">
 							<div class="inner">
-								<h1>Bryan Pedraza</h1>
+								<h1>Bryan Pedraza ☁️</h1>
 								<p>With a strong foundation in cloud technologies, I strive to optimize system performance and enhance team collaboration to deliver reliable, scalable, and secure applications.</p>
 							</div>
 							<div class="counter-number nav-item nav-link text-white-50 font-os font-size-13
@@ -42,21 +42,20 @@
 
 						<!-- Intro/Projects -->
 							<article id="intro">
-								<h2 class="major">Projects</h2>
+								<h2 class="major">☁️ Projects</h2>
 								<!--<span class="image main"><img src="images/pic01.jpg" alt="" /></span>-->
-								<h3>Three Tier Application | AWS</h3>
-								<p>● A highly available and scalable application deployed on EC2 instances using data scripts and terminal.</p>
-								<p>● AWS components (VPC, ASG, ROUTE 53, CDN, ELB, EC2, S3, NAT GATEWAY, API GATEWAY)</p>
-								<h3>Cloud Cost Optimization | AWS</h3>
-								<p>● Combination of CloudWatch and Lambda functions to reduce cloud cost by 30%</p>
-								<p>● Implementations created a Lambda function in Python using boto3 to interact with AWS services APIs this
-									Lambda function is triggered by CloudWatch events.</p>
-								<h3>CICD | AWS</h3>
-								<p>● Using Code commit to implement a Python base application using various stages as of aws code build , unit
-									testing, static code analyst, SAST, DAST, creation of docker images, AWS code pipeline and deploying it on AWS code Deploy.</p>
+								<h3>AWS EBS Volume Manager ☁️</h3>
+								<p>● The AWS EBS Volume Manager is a dynamic solution engineered for the automated management of Amazon Elastic Block Store (EBS) volumes within the AWS cloud. Leveraging AWS services such as CloudWatch and Lambda, this project streamlines EBS volume operations through intelligent triggers and actions.</p>
+								<h3>Automation for S3 Event Handling ☁️</h3>
+								<p>● This project orchestrates the seamless setup of an AWS infrastructure designed to trigger a Lambda function in response to new objects being created within an S3 bucket. The Lambda function, upon execution, broadcasts notifications to an SNS topic, initiating an email notification to subscribers. This powerful infrastructure, inspired by industry giants like Netflix, serves as a pivotal mechanism to alert subscribers about new shows or movies.</p>
+								<h3>Secure Multi-AZ Deployment ☁️</h3>
+								<p>● This project exemplifies a resilient and secure production environment meticulously crafted within a Virtual Private Cloud (VPC). Focused on fortifying the architecture, the deployment spans multiple Availability Zones (AZs) and integrates Auto Scaling Groups (ASG) along with an Application Load Balancer (ALB) to optimize scalability and bolster high availability.</p>
+								<h3>AWS Continuous Integration Project ☁️</h3>
+								<p>● This compelling project illustrates the establishment of a robust Continuous Integration (CI) pipeline for a Python application, seamlessly integrating AWS services. The CI process is fully automated, orchestrated through AWS CodePipeline and AWS CodeBuild. This streamlined workflow ensures the swift integration of changes from a GitHub repository to deployment, enhancing the efficiency and reliability of the development lifecycle.</p>
+								<h3>Cloud Resume Challenge ☁️</h3>
+								<p>This Project encompasses my successful participation in the AWS Cloud Resume Challenge, a multifaceted initiative designed to showcase and reinforce fundamental cloud skills essential for a career in the Cloud. Originated by Forrest Brazeal, this challenge served as a comprehensive assessment of my capabilities in deploying, managing, and optimizing cloud-based solutions within the AWS ecosystem.</p>
 								<!--GitHub to my repository and show more of my projects-->
 								<p> <a href="https://github.com/Pedraza57">github.com/Pedraza57</a>.</p>
-								<p>This is a brief over view of a few projects I have completed, more in my GitHub repo.</p>
 							</article>
 
 						<!-- Work/experience -->
