--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 							<article id="work">
 								<h2 class="major">Experience</h2>
 								<!--<span class="image main"><img src="images/pic02.jpg" alt="" /></span>-->
-								<h2>Senior Analyst | QVC | Ontario CA <p>12/2021- Present</p></h2>
+								<h2>Senior Analyst | QVC | Ontario CA <p>09/2021- Present</p></h2>
 								<p>● Data Analysis and reporting : Conducted in-depth data analysis to identify trends, anomalies, and insights in large datasets. Generated daily reports to track system performance, user behavior and key metrics.</p>
 								<p>● Technical Troubleshooting : Diagnosed and resolved technical issues affection systems and applications, ensuring minimal downtime.</p>
 								<p>● Utilize Strong problem-solving skills to identify root causes and implement effective solutions.</p>
@@ -86,10 +86,10 @@
 								<b>Masters School</b>
 								<p>● Data Analytics Certificate</p>
 								<b>AWS Academy</b>
-								<p>● Cloud Computing</p>
-								<p>● Cloud Architecting</p>
-								<p>● Cloud Developing</p>
-								<p>● Cloud Operations</p>
+								<p>● Cloud Computing <a href="https://www.credly.com/badges/e0e9821f-13c7-46fb-a718-6af5751bda0d/public_url"   class="icon brands fa-aws"><span class="label">aws</span></a> </p>
+								<p>● Cloud Architecting<a href="https://www.credly.com/badges/084eaf0c-021c-4d2d-81ab-fc7a823b03c0/public_url"   class="icon brands fa-aws"><span class="label">aws</span></a> </p>
+								<p>● Cloud Developing <a href="https://www.credly.com/badges/b240b513-8769-4dc4-b9e0-a867a34f0c6d/public_url"   class="icon brands fa-aws"><span class="label">aws</span></a> </p>
+								<p>● Cloud Operations <a href=""   class="icon brands fa-aws"><span class="label">aws</span></a> </p>
 								
 							</article>
 
