--- a/website/index.html
+++ b/website/index.html
@@ -2,7 +2,7 @@
 
 <html>
 	<head>
-		<title>Dev_Ops_Resume</title>
+		<title>Dev_Ops_Resume1</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
