--- a/website/index.html
+++ b/website/index.html
@@ -2,7 +2,7 @@
 
 <html>
 	<head>
-		<title>Dev_Ops_Resume1</title>
+		<title>Dev_Ops_Resume</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -20,7 +20,7 @@
 						</div>
 						<div class="content">
 							<div class="inner">
-								<h1>Bryan Pedraza ☁️</h1>
+								<h1>1Bryan Pedraza ☁️</h1>
 								<p>With a strong foundation in cloud technologies, I strive to optimize system performance and enhance team collaboration to deliver reliable, scalable, and secure applications.</p>
 							</div>
 							<div class="counter-number nav-item nav-link text-white-50 font-os font-size-13
