--- a/website/index.html
+++ b/website/index.html
@@ -16,11 +16,11 @@
 				<!-- Header -->
 					<header id="header">
 						<div class="logo">
-							<span class="icon fa-gem"></span>
+							<p>☁️</p>
 						</div>
 						<div class="content">
 							<div class="inner">
-								<h1>After Pipline Bryan Pedraza ☁️</h1>
+								<h1> Bryan Pedraza ☁️</h1>
 								<p>With a strong foundation in cloud technologies, I strive to optimize system performance and enhance team collaboration to deliver reliable, scalable, and secure applications.</p>
 							</div>
 							<div class="counter-number nav-item nav-link text-white-50 font-os font-size-13
@@ -62,29 +62,30 @@
 							<article id="work">
 								<h2 class="major">Experience</h2>
 								<!--<span class="image main"><img src="images/pic02.jpg" alt="" /></span>-->
-								<h2>Senior Analyst | QVC | Ontario CA <p>09/2021- Present</p></h2>
-								<p>● Data Analysis and reporting : Conducted in-depth data analysis to identify trends, anomalies, and insights in large datasets. Generated daily reports to track system performance, user behavior and key metrics.</p>
-								<p>● Technical Troubleshooting : Diagnosed and resolved technical issues affection systems and applications, ensuring minimal downtime.</p>
-								<p>● Utilize Strong problem-solving skills to identify root causes and implement effective solutions.</p>
-								<p>● Automation and Scripting : Designed and maintained scripts to automate repetitive task, improving efficiency and
-									reducing manual errors.</p>
-								<p>● Proficient in scripting languages such as Python, Bash, PowerShell</p>
+								<h3>Senior Analyst | QVC | Ontario CA <p>09/2020 - Present</p></h3>
+								<p>● Implemented a cloud-base RDS (Relational Database Service) instance as the backend for a returns data program, leveraging AWS (Amazon Web Services) to ensure scalability, reliability, and performance.</p>
+								<p>● Hosted a website on amazon S3  within our network infrastructure to provide teammates with access to the returns data program this was accessible thru amazon cloud front, enabling them to perform tasks such as various audits and research efficiently.</p>
+								<p>● Designed and implemented security measures within the cloud environment, ensuring data privacy and compliance with company policies and regulations.</p>
+								<p>● Conducted regular performance monitoring and optimization of the RDS database instance to maintain optimal efficiency and meet growing demands.</p>
+								<p>● Collaborated with cross-functional teams including developers and operations to troubleshoot issues, implemented enhancements, and drive continuous improvement thru GitHub actions, Amazon Code Pipeline and Amazon Code Build.</p>
+								<h3>Super User | DSV | Fontana CA <p>05/2016 - 09/2020</p></h3>
+								<p>● Analyze large datasets using SQL, Python to identify trends, patterns and insights.</p>
+								<p>● Automate data cleaning and preprocessing tasks, reducing manual workload by 30%</p>
+								<p>● Conduct A/B testing to optimize website performance and user experience resulting in a 15% increase in conversion rates.</p>
+								<p>● Collaborate with cross-functional teams to define project requirements and deliver actionable recommendations.</p>
+								<p>● Create interactive dashboards and reports using Tableau for stakeholders to visualize key metrics.</p>
 							</article>
 
 						<!-- About/skills -->
 							<article id="about">
 								<h2 class="major">Skills</h2>
 								<!--<span class="image main"><img src="images/pic03.jpg" alt="" /></span>-->
-								<h3>Proficient:</h3>
-								<p>● FullStack ● Python ● AWS Cloud ● Git ● Github ● Scripting ● Linux</p> 
-								<h3>knowledgeable:</h3>
-								<p>● Terraform ● Ansible ● Docker ● CICD ● Kubernetes</p>
+								<p>● Python ● AWS web services ● CI/CD ● Kubernetes ● Terraform </p> 
+								<p>● Ansible ● Jenkins ● Docker ● Linux ● Scripting </p>
 								<h2 class="major">Education</h2>
-								<b>Fullstack Academy Web Development Bootcamp</b>
-								<p>● Software Engineering Certificate</p> 
-								<p>● Full-time, DevOps Immersive</p>
-								<b>Masters School</b>
-								<p>● Data Analytics Certificate</p>
+								<h3>● B.A., Business Administration - Emory University 2019</h3>                                                   
+								<h3>● Full FullStack Academy boot camp - 2022</h3>
+								<h3>● DevOps Post Graduate - 2022</h3>
 								<b>AWS Academy</b>
 								<p>● Cloud Computing <a href="https://www.credly.com/badges/e0e9821f-13c7-46fb-a718-6af5751bda0d/public_url"   class="icon brands fa-aws"><span class="label">aws</span></a> </p>
 								<p>● Cloud Architecting<a href="https://www.credly.com/badges/084eaf0c-021c-4d2d-81ab-fc7a823b03c0/public_url"   class="icon brands fa-aws"><span class="label">aws</span></a> </p>
@@ -96,7 +97,7 @@
 						<!-- Contact/Me -->
 							<article id="contact">
 								<h2 class="major">Contact</h2>
-								<form action="mailto:Bryanpedraza57@icloud.com" method="post">
+								<form action="mailto:Bryanpedraza57@icloud.com" method="Post">
 									<div class="fields">
 										<div class="field half">
 											<label for="name">Your Name</label>
@@ -139,7 +140,7 @@
 									<h6>Heading Level 6</h6>
 									<hr />
 									<h4>Blockquote</h4>
-									<blockquote>Fringilla nisl. Donec accumsan interdum nisi, quis tincidunt felis sagittis eget tempus euismod. Vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan faucibus. Vestibulum ante ipsum primis in faucibus lorem ipsum dolor sit amet nullam adipiscing eu felis.</blockquote>
+									<blockquote></blockquote>
 									<h4>Preformatted</h4>
 									<pre><code>i = 0;
 while (!deck.isInOrder()) {
