--- a/website/index.html
+++ b/website/index.html
@@ -83,7 +83,7 @@
 								<p>● Python ● AWS web services ● CI/CD ● Kubernetes ● Terraform </p> 
 								<p>● Ansible ● Jenkins ● Docker ● Linux ● Scripting </p>
 								<h2 class="major">Education</h2>
-								<h3>● B.A., Business Administration - Emory University 2019</h3>                                                   
+								<h3>● B.S. Computer Science - Emory University 2015 - 2019</h3>                                                   
 								<h3>● Full FullStack Academy boot camp - 2022</h3>
 								<h3>● DevOps Post Graduate - 2022</h3>
 								<b>AWS Academy</b>
