--- a/website/index.html
+++ b/website/index.html
@@ -21,7 +21,7 @@
 						<div class="content">
 							<div class="inner">
 								<h1> Bryan Pedraza ☁️</h1>
-								<p>With a strong foundation in cloud technologies, I strive to optimize system performance and enhance team collaboration to deliver reliable, scalable, and secure applications.</p>
+								<p>With a robust background in data-driven analysis and strategic problem-solving, I am dedicated to optimizing business processes and enhancing cross-functional collaboration, driving impactful and scalable solutions that align with organizational goals.</p>
 							</div>
 							<div class="counter-number nav-item nav-link text-white-50 font-os font-size-13
 							active">Views: </div>
@@ -44,16 +44,25 @@
 							<article id="intro">
 								<h2 class="major">☁️ Projects</h2>
 								<!--<span class="image main"><img src="images/pic01.jpg" alt="" /></span>-->
-								<h3>AWS EBS Volume Manager ☁️</h3>
-								<p>● The AWS EBS Volume Manager is a dynamic solution engineered for the automated management of Amazon Elastic Block Store (EBS) volumes within the AWS cloud. Leveraging AWS services such as CloudWatch and Lambda, this project streamlines EBS volume operations through intelligent triggers and actions.</p>
-								<h3>Automation for S3 Event Handling ☁️</h3>
-								<p>● This project orchestrates the seamless setup of an AWS infrastructure designed to trigger a Lambda function in response to new objects being created within an S3 bucket. The Lambda function, upon execution, broadcasts notifications to an SNS topic, initiating an email notification to subscribers. This powerful infrastructure, inspired by industry giants like Netflix, serves as a pivotal mechanism to alert subscribers about new shows or movies.</p>
-								<h3>Secure Multi-AZ Deployment ☁️</h3>
-								<p>● This project exemplifies a resilient and secure production environment meticulously crafted within a Virtual Private Cloud (VPC). Focused on fortifying the architecture, the deployment spans multiple Availability Zones (AZs) and integrates Auto Scaling Groups (ASG) along with an Application Load Balancer (ALB) to optimize scalability and bolster high availability.</p>
-								<h3>AWS Continuous Integration Project ☁️</h3>
-								<p>● This compelling project illustrates the establishment of a robust Continuous Integration (CI) pipeline for a Python application, seamlessly integrating AWS services. The CI process is fully automated, orchestrated through AWS CodePipeline and AWS CodeBuild. This streamlined workflow ensures the swift integration of changes from a GitHub repository to deployment, enhancing the efficiency and reliability of the development lifecycle.</p>
-								<h3>Cloud Resume Challenge ☁️</h3>
-								<p>This Project encompasses my successful participation in the AWS Cloud Resume Challenge, a multifaceted initiative designed to showcase and reinforce fundamental cloud skills essential for a career in the Cloud. Originated by Forrest Brazeal, this challenge served as a comprehensive assessment of my capabilities in deploying, managing, and optimizing cloud-based solutions within the AWS ecosystem.</p>
+								<h3>QVC ☁️</h3>
+								<p>● Spearheaded the development of an advanced analytics framework using SQL and
+									 Python, optimizing data processing by 30% and enhancing predictive analytics capabilities
+									 for strategic decision-making.</p>
+								<p>● Designed and implemented dynamic dashboards and reports in Tableau and Power BI,
+									 providing real-time business insights that led to a 20% increase in operational efficiency
+									 across multiple departments.</p>
+								<p>● Developed a predictive model to forecast sales trends, which improved inventory
+									 management and reduced overstock by 25%</p>
+								<p>● Conducted comprehensive trend analysis and market research to identify emerging
+									 opportunities, contributing to a 15% revenue increase by influencing product
+									 development and marketing strategies.</p>
+								<h3>DSV ☁️</h3>
+								<p>● Analyze large datasets using SQL, Python to identify trends, patterns and insights.</p>
+                                <p>● Automate data cleaning and preprocessing tasks, reducing manual workload by 30%</p>
+                                <p>● Conduct A/B testing to optimize website performance and user experience resulting in a 15% increase in conversion rates.</p>
+                                <p>● Collaborate with cross-functional teams to define project requirements and deliver actionable recommendations.</p>
+                                <p>● Create interactive dashboards and reports using Tableau for stakeholders to visualize key metrics.</p>
+
 								<!--GitHub to my repository and show more of my projects-->
 								<p> <a href="https://github.com/Pedraza57">github.com/Pedraza57</a>.</p>
 							</article>
@@ -63,29 +72,20 @@
 								<h2 class="major">Experience</h2>
 								<!--<span class="image main"><img src="images/pic02.jpg" alt="" /></span>-->
 								<h3>Senior Analyst | QVC | Ontario CA <p>09/2020 - Present</p></h3>
-								<p>● Implemented a cloud-base RDS (Relational Database Service) instance as the backend for a returns data program, leveraging AWS (Amazon Web Services) to ensure scalability, reliability, and performance.</p>
-								<p>● Hosted a website on amazon S3  within our network infrastructure to provide teammates with access to the returns data program this was accessible thru amazon cloud front, enabling them to perform tasks such as various audits and research efficiently.</p>
-								<p>● Designed and implemented security measures within the cloud environment, ensuring data privacy and compliance with company policies and regulations.</p>
-								<p>● Conducted regular performance monitoring and optimization of the RDS database instance to maintain optimal efficiency and meet growing demands.</p>
-								<p>● Collaborated with cross-functional teams including developers and operations to troubleshoot issues, implemented enhancements, and drive continuous improvement thru GitHub actions, Amazon Code Pipeline and Amazon Code Build.</p>
-								<h3>Super User | DSV | Fontana CA <p>05/2016 - 09/2020</p></h3>
-								<p>● Analyze large datasets using SQL, Python to identify trends, patterns and insights.</p>
-								<p>● Automate data cleaning and preprocessing tasks, reducing manual workload by 30%</p>
-								<p>● Conduct A/B testing to optimize website performance and user experience resulting in a 15% increase in conversion rates.</p>
-								<p>● Collaborate with cross-functional teams to define project requirements and deliver actionable recommendations.</p>
-								<p>● Create interactive dashboards and reports using Tableau for stakeholders to visualize key metrics.</p>
+								<p>● As a Senior Business Analyst at QVC, I played a pivotal role in driving the company’s growth through data analysis and actionable insights. My responsibilities included creating comprehensive reports, tracking performance metrics, researching market trends, and managing various analytical projects. I ensured data accuracy, collaborated with cross-functional teams, and communicated findings in an easily understandable manner. Additionally, I stayed current with the latest analytical tools and continuously sought ways to improve methodologies and processes.</p>
+
+								<h3>Data Analyst | DSV | Fontana CA <p>05/2016 - 09/2020</p></h3>
+								<p>● In my role as a Data Analyst at DSV, I was responsible for collecting, analyzing, and interpreting large datasets to provide actionable insights. I created detailed reports and visualizations to effectively communicate findings to senior leaders. By collaborating with cross-functional teams, I helped identify and solve complex business problems.</p>
 							</article>
 
 						<!-- About/skills -->
 							<article id="about">
 								<h2 class="major">Skills</h2>
 								<!--<span class="image main"><img src="images/pic03.jpg" alt="" /></span>-->
-								<p>● Python ● AWS web services ● CI/CD ● Kubernetes ● Terraform </p> 
-								<p>● Ansible ● Jenkins ● Docker ● Linux ● Scripting </p>
+								<p>● Python ● SQL ● Advance Excel ● Power BI ● Tableau ● AWS web services </p> 
 								<h2 class="major">Education</h2>
-								<h3>● B.S. Computer Science - Emory University 2015 - 2019</h3>                                                   
-								<h3>● Full FullStack Academy boot camp - 2022</h3>
-								<h3>● DevOps Post Graduate - 2022</h3>
+								<h3>● B.S. Computer Science - 3.8 GPA - Emory University 2015 - 2019</h3>                                                   
+								<h3>● Certify Business intelligence Professional (CBIP)</h3>
 								<b>AWS Academy</b>
 								<p>● Cloud Computing <a href="https://www.credly.com/badges/e0e9821f-13c7-46fb-a718-6af5751bda0d/public_url"   class="icon brands fa-aws"><span class="label">aws</span></a> </p>
 								<p>● Cloud Architecting<a href="https://www.credly.com/badges/084eaf0c-021c-4d2d-81ab-fc7a823b03c0/public_url"   class="icon brands fa-aws"><span class="label">aws</span></a> </p>
