--- a/website/index.html
+++ b/website/index.html
@@ -84,7 +84,7 @@
 								<!--<span class="image main"><img src="images/pic03.jpg" alt="" /></span>-->
 								<p>● Python ● SQL ● Advance Excel ● Power BI ● Tableau ● AWS web services </p> 
 								<h2 class="major">Education</h2>
-								<h3>● B.S. Computer Science - 3.8 GPA - Emory University 2015 - 2019</h3>                                                   
+								<h3>● B.S. Business Administration - 3.8 GPA - Capella University</h3>                                                   
 								<h3>● Certify Business intelligence Professional (CBIP)</h3>
 								<b>AWS Academy</b>
 								<p>● Cloud Computing <a href="https://www.credly.com/badges/e0e9821f-13c7-46fb-a718-6af5751bda0d/public_url"   class="icon brands fa-aws"><span class="label">aws</span></a> </p>
