--- a/website/index.html
+++ b/website/index.html
@@ -44,6 +44,14 @@
 							<article id="intro">
 								<h2 class="major">☁️ Projects</h2>
 								<!--<span class="image main"><img src="images/pic01.jpg" alt="" /></span>-->
+								<h3>Sales Risk Alert Dashboard</h3>
+								<p>
+									Built a Power BI + Power Automate system to flag accounts with ≥25% MoM sales decline. Automated weekly email alerts for the sales team, using SQL data models to identify high-risk accounts by region.
+									</p>
+								<h3>Inventory & Product Performance Dashboard</h3>
+								<p>
+									Developed a dynamic Power BI dashboard to track monthly inventory levels, top-selling SKUs, and underperformers. Integrated customer, invoice, and product data to support procurement decisions.
+									</p>
 								<h3>QVC ☁️</h3>
 								<p>● Spearheaded the development of an advanced analytics framework using SQL and
 									 Python, optimizing data processing by 30% and enhancing predictive analytics capabilities
@@ -71,10 +79,10 @@
 							<article id="work">
 								<h2 class="major">Experience</h2>
 								<!--<span class="image main"><img src="images/pic02.jpg" alt="" /></span>-->
-								<h3>Senior Analyst | QVC | Ontario CA <p>09/2020 - Present</p></h3>
+								<h3>Senior Analyst | QVC | Ontario CA <p>12/2020 - 01/2025</p></h3>
 								<p>● As a Senior Business Analyst at QVC, I played a pivotal role in driving the company’s growth through data analysis and actionable insights. My responsibilities included creating comprehensive reports, tracking performance metrics, researching market trends, and managing various analytical projects. I ensured data accuracy, collaborated with cross-functional teams, and communicated findings in an easily understandable manner. Additionally, I stayed current with the latest analytical tools and continuously sought ways to improve methodologies and processes.</p>
 
-								<h3>Data Analyst | DSV | Fontana CA <p>05/2016 - 09/2020</p></h3>
+								<h3>Data Analyst | DSV | Fontana CA <p>03/2020 - 12/2020</p></h3>
 								<p>● In my role as a Data Analyst at DSV, I was responsible for collecting, analyzing, and interpreting large datasets to provide actionable insights. I created detailed reports and visualizations to effectively communicate findings to senior leaders. By collaborating with cross-functional teams, I helped identify and solve complex business problems.</p>
 							</article>
 
@@ -82,9 +90,9 @@
 							<article id="about">
 								<h2 class="major">Skills</h2>
 								<!--<span class="image main"><img src="images/pic03.jpg" alt="" /></span>-->
-								<p>● Python ● SQL ● Advance Excel ● Power BI ● Tableau ● AWS web services </p> 
+								<p>● Python ● SQL ● Advance Excel ● Power BI  ● AWS web services ● Data Visualizations ● Communication Skills </p> 
 								<h2 class="major">Education</h2>
-								<h3>● B.S. Business Administration - 3.8 GPA - Capella University</h3>                                                   
+								<h3>● Capella University B.S. Data Analytics</h3>                                                   
 								<h3>● Certify Business intelligence Professional (CBIP)</h3>
 								<b>AWS Academy</b>
 								<p>● Cloud Computing <a href="https://www.credly.com/badges/e0e9821f-13c7-46fb-a718-6af5751bda0d/public_url"   class="icon brands fa-aws"><span class="label">aws</span></a> </p>
