--- a/website/index.html
+++ b/website/index.html
@@ -44,14 +44,19 @@
 							<article id="intro">
 								<h2 class="major">☁️ Projects</h2>
 								<!--<span class="image main"><img src="images/pic01.jpg" alt="" /></span>-->
-								<h3>Sales Risk Alert Dashboard</h3>
-								<p>
-									Built a Power BI + Power Automate system to flag accounts with ≥25% MoM sales decline. Automated weekly email alerts for the sales team, using SQL data models to identify high-risk accounts by region.
-									</p>
-								<h3>Inventory & Product Performance Dashboard</h3>
-								<p>
-									Developed a dynamic Power BI dashboard to track monthly inventory levels, top-selling SKUs, and underperformers. Integrated customer, invoice, and product data to support procurement decisions.
-									</p>
+								<h3>National Legislative Intelligence Tracker</h3>
+								<p>Designed a Python and SQL-based system that integrates with the LegiScan API to monitor U.S. state-level legislation impacting controlled products (e.g., Kratom, Delta). Delivered automated compliance summaries and alerts, enabling leadership to make rapid, law-informed business decisions—an approach applicable to mission-critical legal and regulatory monitoring.</p>
+								<h3>Strategic Risk Alert Dashboard</h3>
+								<p>Developed an automated Power BI reporting system to detect and visualize sales and inventory anomalies across nationwide retail accounts. Combined transactional data with business unit hierarchies to generate early warnings for market decline, supporting executive situational awareness and operational decision-making.</p>
+								<h3>Max Delivers ☁️</h3>
+								<p>● Engineered a legislation monitoring system using Python, SQL, and the LegiScan API to
+									 identify U.S. laws affecting restricted product sales (e.g., Kratom, Delta), aiding legal
+									 compliance and strategic planning.</p>
+								<p>● Developed automated Power BI and Python reporting tools to track sales risk, zero
+									 inventory, and underperforming products, enabling proactive sales interventions.</p>
+								<p>● Built executive dashboards to evaluate regional sales performance, business unit trends,
+									 and regulatory impacts, combining multiple datasets via complex SQL joins and
+									 Subqueries to deliver insights directly to C-level stakeholders.</p>	
 								<h3>QVC ☁️</h3>
 								<p>● Spearheaded the development of an advanced analytics framework using SQL and
 									 Python, optimizing data processing by 30% and enhancing predictive analytics capabilities
@@ -79,11 +84,14 @@
 							<article id="work">
 								<h2 class="major">Experience</h2>
 								<!--<span class="image main"><img src="images/pic02.jpg" alt="" /></span>-->
-								<h3>Senior Analyst | QVC | Ontario CA <p>12/2020 - 01/2025</p></h3>
-								<p>● As a Senior Business Analyst at QVC, I played a pivotal role in driving the company’s growth through data analysis and actionable insights. My responsibilities included creating comprehensive reports, tracking performance metrics, researching market trends, and managing various analytical projects. I ensured data accuracy, collaborated with cross-functional teams, and communicated findings in an easily understandable manner. Additionally, I stayed current with the latest analytical tools and continuously sought ways to improve methodologies and processes.</p>
+								<h3>Business Intelligence Analyst| Max Delivers | Remote CA <p>01/2025 - Present</p></h3>
+								<p>● Conduct advanced data analysis to support operational strategy, regulatory compliance, and product risk intelligence. Designed and deployed automated systems to track legislative changes affecting controlled products across U.S. states using Python, SQL, and API integrations. Deliver executive-level dashboards and reports that enhance decision-making, monitor national sales trends, and identify potential legal and market exposure.</p>
+								
+								<h3>Senior Analyst | QVC | Hybrid CA <p>12/2022 - 01/2025</p></h3>
+								<p>● Led data-driven initiatives to inform executive strategy and optimize business operations across multiple departments. Developed performance dashboards, conducted deep market trend analyses, and managed high-impact analytical projects to identify growth opportunities and operational risks. Ensured data integrity and translated complex datasets into clear, actionable intelligence for stakeholders. Collaborated across teams to improve reporting methodologies, streamline data workflows, and integrate evolving analytical tools for enhanced insight generation.</p>
 
-								<h3>Data Analyst | DSV | Fontana CA <p>03/2020 - 12/2020</p></h3>
-								<p>● In my role as a Data Analyst at DSV, I was responsible for collecting, analyzing, and interpreting large datasets to provide actionable insights. I created detailed reports and visualizations to effectively communicate findings to senior leaders. By collaborating with cross-functional teams, I helped identify and solve complex business problems.</p>
+								<h3>Data Analyst | DSV | Fontana CA <p>03/2020 - 12/2022</p></h3>
+								<p>● Extracted and analyzed large-scale operational data to support strategic planning and performance optimization. Produced detailed reports and visualizations to communicate key findings to leadership, facilitating data-driven decisions. Partnered with cross-functional teams to identify root causes of business challenges and implement solutions that enhanced process efficiency and organizational effectiveness.</p>
 							</article>
 
 						<!-- About/skills -->
@@ -92,8 +100,9 @@
 								<!--<span class="image main"><img src="images/pic03.jpg" alt="" /></span>-->
 								<p>● Python ● SQL ● Advance Excel ● Power BI  ● AWS web services ● Data Visualizations ● Communication Skills </p> 
 								<h2 class="major">Education</h2>
-								<h3>● Capella University B.S. Data Analytics</h3>                                                   
-								<h3>● Certify Business intelligence Professional (CBIP)</h3>
+								<h3>● Capella University Masters in Data Analytics (Expected 2027)</h3> 
+								<h3>● B.S. in Business Administration - Data Analytics concentration</h3>                                                   
+								<h3>● Data Analytics Professional Certificate - Break into tech</h3>
 								<b>AWS Academy</b>
 								<p>● Cloud Computing <a href="https://www.credly.com/badges/e0e9821f-13c7-46fb-a718-6af5751bda0d/public_url"   class="icon brands fa-aws"><span class="label">aws</span></a> </p>
 								<p>● Cloud Architecting<a href="https://www.credly.com/badges/084eaf0c-021c-4d2d-81ab-fc7a823b03c0/public_url"   class="icon brands fa-aws"><span class="label">aws</span></a> </p>
