--- a/website/index.html
+++ b/website/index.html
@@ -100,9 +100,8 @@
 								<!--<span class="image main"><img src="images/pic03.jpg" alt="" /></span>-->
 								<p>● Python ● SQL ● Advance Excel ● Power BI  ● AWS web services ● Data Visualizations ● Communication Skills </p> 
 								<h2 class="major">Education</h2>
-								<h3>● Capella University Masters in Data Analytics (Expected 2027)</h3> 
-								<h3>● B.S. in Business Administration - Data Analytics concentration</h3>                                                   
-								<h3>● Data Analytics Professional Certificate - Break into tech</h3>
+								<h3>● Boston Universtiy Masters in Business Analytics (Expected 2027)</h3> 
+								<h3>● B.S. in Business Administration</h3>                                                   
 								<b>AWS Academy</b>
 								<p>● Cloud Computing <a href="https://www.credly.com/badges/e0e9821f-13c7-46fb-a718-6af5751bda0d/public_url"   class="icon brands fa-aws"><span class="label">aws</span></a> </p>
 								<p>● Cloud Architecting<a href="https://www.credly.com/badges/084eaf0c-021c-4d2d-81ab-fc7a823b03c0/public_url"   class="icon brands fa-aws"><span class="label">aws</span></a> </p>
