--- a/website/index.html
+++ b/website/index.html
@@ -98,10 +98,10 @@
 							<article id="about">
 								<h2 class="major">Skills</h2>
 								<!--<span class="image main"><img src="images/pic03.jpg" alt="" /></span>-->
-								<p>● Python ● SQL ● Advance Excel ● Power BI  ● AWS web services ● Data Visualizations ● Communication Skills </p> 
+								<p>● Python ● SQL ● Advance Excel ● Power BI  ● AWS web services ● Data Visualizations ● Communication</p> 
 								<h2 class="major">Education</h2>
-								<h3>● Boston Universtiy Masters in Business Analytics (Expected 2027)</h3> 
-								<h3>● B.S. in Business Administration</h3>                                                   
+								<h3>● MS Data Analytics (Expected 2026) - Capella University</h3> 
+								<h3>● B.S. in Business Administration - Capella University gpa 3.8</h3>                                                   
 								<b>AWS Academy</b>
 								<p>● Cloud Computing <a href="https://www.credly.com/badges/e0e9821f-13c7-46fb-a718-6af5751bda0d/public_url"   class="icon brands fa-aws"><span class="label">aws</span></a> </p>
 								<p>● Cloud Architecting<a href="https://www.credly.com/badges/084eaf0c-021c-4d2d-81ab-fc7a823b03c0/public_url"   class="icon brands fa-aws"><span class="label">aws</span></a> </p>
